# wanis-elderly-care-robot

./: .gitignore  LICENSE  README.md  robot.repos
docs/: design-notes.md  hardware.md
patches/: KinectV1-Ros2.patch  bno08x-ros2-driver.patch  hoverboard-firmware-hack-FOC.patch  hoverboard_ros2_control.patch  kinect2_ros2.patch
prototype_1/: README.md
prototype_1/explorer/: explorer.py
prototype_1/my_bot/description/: camera.xacro  depth_camera.xacro  depth_camera_new.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  robot.urdf.xacro  robot_body.xacro  ros2_control.xacro  rplidar.xacro
prototype_1/my_bot/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  state_estimation.launch.py
prototype_1/my_bot/new_launch/: robot_new.launch.py  robot_remote_station_new.launch.py  sim_control_station_new.launch.py  sim_new.launch.py
prototype_1/person_follower/: final_person_follower.py
scripts/: download_models.sh  setup_workspace.sh
src/person_follower/: package.xml  setup.py
src/person_follower/person_follower/: fall3.py  final_person_follower.py  safety_guard_on_rpi.py
src/wanis_bringup/config/: ekf.yaml  ekf_sim.yaml  gui.config  gz_bridge.yaml  hoverboard_controllers_sim.yaml  mapper_params_online_sync.yaml  nav2_params_changed.yaml  nav2_params_heavy.yaml  twist_mux.yaml  ukf.yaml
src/wanis_bringup/launch/: bringup_launch.py  calibrate.launch.py  camera.launch.py  hoverboard_server.launch.py  joystick.launch.py  kinect2_pointcloud.launch.py  navigation_launch.py  online_async_launch.py  (+3 more)
(+10 files in other folders)
