<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_follower</name>
  <version>1.0.0</version>
  <description>Identity-locked person following, fall detection and safety guard for the Wanis elderly-care robot</description>
  <maintainer email="yasser17galal2003@gmail.com">Yasser Galal</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <!-- Python-only deps installed via pip (not rosdep):
       ultralytics (YOLO11 + BoT-SORT), torch + torchreid (OSNet ReID),
       scikit-image (LBP texture), opencv-python (imaging).
       Install:  pip install ultralytics torch torchreid scikit-image opencv-python -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
